# sans-io-runtime

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml  typos.yml
docs/: benchmark.md
examples/: benchmark_ext.rs  multi_types.rs  tcp_echo_server.rs  udp_echo_client.rs  udp_echo_server.rs  webrtc.rs
examples/http/: mod.rs
examples/sfu/: mod.rs  shared_port.rs  whep.rs  whip.rs
src/: backend.rs  buffer.rs  bus.rs  collections.rs  controller.rs  lib.rs  owner.rs  task.rs  trace.rs  worker.rs
src/backend/: mio.rs  poll.rs  polling.rs
src/bus/: leg.rs  local_hub.rs
src/collections/: bit_vec.rs  dequeue.rs  mod.rs  vec.rs
src/task/: group.rs  group_state.rs  switcher.rs
